--- a/hamed/index.html
+++ b/hamed/index.html
@@ -62,10 +62,10 @@
           <!-- ***** Menu Start ***** -->
           <ul class="nav">
             <li class="scroll-to-section"><a href="#top" class="active">خانه</a></li>
-            <li class="scroll-to-section"><a href="/table/v.html">لیست ماشین ها</a></li>
+            <li class="scroll-to-section"><a href="/table/vvv.html">لیست ماشین ها</a></li>
             <li class="scroll-to-section"><a href="/table/cartable.html">کارتابل</a></li>
             <li class="scroll-to-section"><a href="/table/expert.html">کارشناس</a></li>
-            <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
+            <li class="scroll-to-section"><a href="/table/cate.html">گروها</a></li>
             <li><div class="gradient-button"><a href="#" id="logoutBtn"><i class="fa fa-sign-in-alt"></i> خروج از سیستم</a></div></li>
 
 
@@ -92,8 +92,9 @@
             <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
               <div class="row">
                 <div class="col-lg-12">
-                  <h2>Get The Latest App From App Stores</h2>
-                  <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
+                  <h2>Vehicle authenticity detection system</h2>
+                  <p>........................................................</p>
+                  <p>...............................................................................................................</p>
                 </div>
                 <div class="col-lg-12">
                   <div class="white-button first-button scroll-to-section">
