--- a/table/vvv.html
+++ b/table/vvv.html
@@ -42,18 +42,13 @@
     th {
       background-color: #f2f2f2;
     }
-    .btn {
-      display: inline-block;
+    button {
       padding: 10px 20px;
+      border: none;
       background-color: #007bff;
       color: #fff;
-      border: none;
       border-radius: 4px;
       cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .btn:hover {
-      background-color: #0056b3;
     }
   </style>
 </head>
@@ -69,7 +64,7 @@
 
   <label for="selectAll">انتخاب همه</label>
   <input type="checkbox" id="selectAll" onchange="toggleSelectAll()">
-  <button class="btn" onclick="allocateVehicles()"><a>تخصیص ماشین‌ها</a></button>
+
   <table id="vehicleTable">
     <thead>
     <tr>
@@ -81,6 +76,9 @@
       <th>شماره موتور</th>
       <th>تاریخ بازدید</th>
       <th>کارخانه</th>
+      <th>انبار</th>
+      <th>کد</th>
+      <th>کد</th>
     </tr>
     </thead>
     <tbody id="vehicleTableBody">
@@ -88,13 +86,12 @@
     </tbody>
   </table>
 
-
+  <button onclick="allocateVehicles()">تخصیص ماشین‌ها</button>
+  <button > <a  href="/table/vc.html">ثبت ماشین</a></button>
 </div>
-
 <script>
   function loadVehicles() {
     var token = localStorage.getItem('accessToken');
-
     var selection = document.getElementById("carType").value;
     var url = 'http://localhost:8080/vehicles-controller/listVehicles/' + selection;
 
@@ -125,7 +122,19 @@
                     <td>${vehicle.engineNumber}</td>
                     <td>${vehicle.dateOfVisit}</td>
                     <td>${vehicle.factory.id}</td>
+                    <td>${vehicle.placeOfVisit.city.cityName}</td>
+                    <td>${vehicle.placeOfVisit.id}</td>
+                    <td>${vehicle.placeOfVisit.city.id}</td>
                 `;
+
+      // اضافه کردن یک چک باکس به هر ردیف برای انتخاب
+      var checkboxCell = document.createElement("td");
+      var checkbox = document.createElement("input");
+      checkbox.type = "checkbox";
+      checkbox.value = vehicle.id;
+      checkboxCell.appendChild(checkbox);
+      row.appendChild(checkboxCell);
+
       tableBody.appendChild(row);
     });
   }
@@ -144,14 +153,41 @@
   }
 
   // تابع برای ارسال درخواست تخصیص ماشین‌ها
+
   function allocateVehicles() {
     var token = localStorage.getItem('accessToken');
-
     var checkboxes = document.querySelectorAll("#vehicleTableBody input[type='checkbox']:checked");
-    var vehicleIds = [];
+    var vehicles = [];
+
     checkboxes.forEach(checkbox => {
-      vehicleIds.push(checkbox.value);
+      var vehicle = checkbox.closest('tr').querySelectorAll('td');
+      var vehicleData = {
+        id: vehicle[0].innerText,
+        system: vehicle[1].innerText,
+        carType: vehicle[2].innerText,
+        style: vehicle[3].innerText,
+        chassisNo: vehicle[4].innerText,
+        engineNumber: vehicle[5].innerText,
+        ColoDescription: null,
+        dateOfVisit: vehicle[6].innerText,
+        factory: {
+          id: vehicle[7].innerText
+        },
+        placeOfVisit: {
+          id: vehicle[9].innerText,
+          city: {
+            id: vehicle[10].innerText,
+            cityName: vehicle[8].innerText,
+          }
+        }
+      };
+      vehicles.push(vehicleData);
     });
+
+    if (vehicles.length === 0) {
+      alert('هیچ ماشینی انتخاب نشده است.');
+      return;
+    }
 
     fetch('http://localhost:8080/allocation-controller/allocateNew', {
       method: 'POST',
@@ -159,7 +195,7 @@
         'Authorization': `Bearer ${token}`,
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({ vehicleIds: vehicleIds })
+      body: JSON.stringify(vehicles)
     })
       .then(response => {
         if (response.ok) {
@@ -174,5 +210,7 @@
       });
   }
 </script>
+
+
 </body>
 </html>
